WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287493
[macOS] UI process sometimes crashes under ViewGestureController::disconnectFromProcess()
https://bugs.webkit.org/show_bug.cgi?id=287493
Summary
[macOS] UI process sometimes crashes under ViewGestureController::disconnectF...
Wenson Hsieh
Reported
2025-02-11 10:47:27 PST
rdar://143899055
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-02-11 10:55:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40421
EWS
Comment 2
2025-02-11 14:22:26 PST
Committed
290239@main
(ddea8b1d5e51): <
https://commits.webkit.org/290239@main
> Reviewed commits have been landed. Closing PR #40421 and removing active labels.
EWS
Comment 3
2025-02-18 11:31:50 PST
Committed
289651.134@safari-7621-branch
(a9d3c6b3f3e1): <
https://commits.webkit.org/289651.134@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2621 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug