[macOS] UI process sometimes crashes under ViewGestureController::disconnectFromProcess() https://bugs.webkit.org/show_bug.cgi?id=287493 rdar://143899055

Reviewed by Charlie Wolfe and Abrar Rahman Protyasha.

Null check `m_mainFrameProcess` before attempting to remove the `ViewGestureController` message
receiver. In the case where the main `WebProcessProxy` outlives the controller, `WebProcessProxy`
teardown should already have cleaned up message receivers (and invoked any messages pending reply)
anyways, so it should be safe to avoid this removal step.

* Source/WebKit/UIProcess/ViewGestureController.cpp:
(WebKit::ViewGestureController::disconnectFromProcess):

Canonical link: https://commits.webkit.org/290239@main